#APPDEV-3179 wrapping all accordion content into table elements to prevent broken media break the whole page
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@25783 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/pdp/accordion.css
+++ b/projects/Media/docroot/assets/css/pdp/accordion.css
@@ -86,6 +86,11 @@
 	padding-left:20px;
 }
 
+.pdp-accordion-item td {
+  font-size: inherit;
+  font-style: inherit;
+}
+
 .pdp-accordion-item h2 {
 	padding-left:20px;
 }
